# Juggernaut

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  logs.txt  mod.json  readme.md
.github/workflows/: build.yml
src/: LayoutGate.cpp  LayoutGate.hpp  Overlay.cpp  Overlay.hpp  ShadowManager.cpp  ShadowManager.hpp  ShadowState.hpp  Spout.cpp  Spout.hpp  SpoutManager.cpp  SpoutManager.hpp  audio_guard.cpp  audio_guard.hpp  indicators.cpp  indicators.hpp  layout_mode.cpp  layout_mode.hpp  main.cpp  shadow_layer.cpp  shadow_layer.hpp  spout_output.cpp  spout_output.hpp
src/hooks/: FMODHooks.cpp  PlayLayerHooks.cpp
src/spout/: spout_wrapper.cpp  spout_wrapper.h
